# lendist-app

./: .gitattributes  .gitignore  Makefile  README.md  add_status_to_loans.sql  package-lock.json  package.json  pyproject.toml
lending-app/: README.md  alembic.ini  init.sh  package-lock.json  pyproject.toml  vercel.json
lending-app/alembic/: env.py  script.py.mako
lending-app/alembic/versions/: add_status_to_loans.py  d44382c0362c_add_user_id_to_loan_borrower_payment_.py  init_script.py
lending-app/app/: main.py
lending-app/app/core/: auth.py  config.py  database.py  scheduler.py
lending-app/app/crud/: borrower.py  loan.py  payment.py
lending-app/app/models/: borrower.py  loan.py  payment.py  user.py
lending-app/app/routers/: borrower.py  dashboard.py  loan.py  payment.py  reminders.py
lending-app/app/schemas/: __init__.py  borrower.py  loan.py  payment.py
lending-app/migrations/: __init__.py  add_email_address_to_borrowers.py
lendist-dashboard/: components.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
lendist-dashboard/src/: App.tsx  main.tsx  supabaseClient.ts
lendist-dashboard/src/api/: useApi.ts
lendist-dashboard/src/components/: AlertsTab.tsx  BorrowerList.tsx  KPICards.tsx  Layout.tsx  LoanList.tsx  NewBorrowerForm.tsx  PaymentCollector.tsx  PaymentStatus.tsx  ProfitChart.tsx  RepaymentSchedulePreview.tsx  borrower-dialog.tsx  create-borrower-dialog.tsx  create-loan-dialog.tsx  header.tsx  loading-state.tsx  sidebar.tsx  (+3 more)
(+40 files in other folders)
